trunk/Archive/880bde810cebedd18bdf96d819a0b89c-25dabfc2c190f5ef027f31d968947336/output
main.cpp:7:11: error: no member named 'swap' in the global namespace
        ::swap(*this, other); // note the scope operator
        ~~^
1 error generated.
